--- a/src/sass/sections/_articlesgallery.scss
+++ b/src/sass/sections/_articlesgallery.scss
@@ -55,12 +55,13 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba($primary-color, 0.9);
+      background: rgba($primary-color, 0.8);
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       opacity: 0;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.8s ease-in-out;
       padding: 2rem;
       z-index: 2; // overlay is above image/icon
 
@@ -68,7 +69,16 @@
         color: $white-color;
         font-size: 1.8rem;
         text-align: center;
+        margin: 0 0 1.5rem 0;
+      }
+
+      .click-to-view {
+        color: $white-color;
+        font-size: 1.2rem;
+        text-align: center;
         margin: 0;
+        opacity: 0.9;
+        font-style: italic;
       }
     }
   }
