--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -38,14 +38,19 @@
         font-weight: bold;
         margin-bottom: 1.8rem;
         font-size: $mid-font-size;
+        color: #000;
 
         @include respond(phone) {
           font-size: 2rem;
         }
       }
 
-      & p > a {
-        color: $secondary-color;
+      & p {
+        color: #000;
+        
+        & > a {
+          color: $secondary-color;
+        }
       }
     }
 
@@ -72,6 +77,71 @@
           box-shadow: none;
           margin-bottom: 3.2rem;
         }
+      }
+    }
+  }
+
+  // Article card overlay for carousel
+  .article-card {
+    position: relative;
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    overflow: hidden;
+
+    &:hover .article-overlay {
+      opacity: 1;
+    }
+
+    .article-placeholder {
+      position: relative;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .article-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba($primary-color, 0.95);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+      padding: 2rem;
+      z-index: 2;
+
+      h3 {
+        color: $white-color;
+        font-size: 1.4rem;
+        text-align: center;
+        margin: 0;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        line-height: 1.4;
+
+        @include respond(phone) {
+          font-size: 1.2rem;
+          -webkit-line-clamp: 3;
+        }
+      }
+
+      p {
+        color: $white-color;
+        font-size: 1.2rem;
+        text-align: center;
+        margin: 0.5rem 0 0 0;
+        opacity: 0.9;
       }
     }
   }
