--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
+  // Base background under overlay layers
   background: $white-color;
   font-weight: 400;
   color: $dark-blue-text;
@@ -25,12 +26,30 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("./assets/mountain_lines.gif");
-    background-size: cover;
-    opacity: 0;
     pointer-events: none;
     z-index: 1;
-    animation: fadeInHero 2s ease-in forwards;
+
+    // Layer 1: subtle brown tint behind the lines
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(252, 214, 189, 0.43);
+      z-index: 0;
+    }
+
+    // Layer 2: animated mountain lines gif above the tint
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: url("./assets/mountain_lines.gif");
+      background-size: cover;
+      background-position: center;
+      opacity: 0;
+      animation: fadeInHero 2s ease-in forwards;
+      z-index: 1;
+    }
   }
 
   @keyframes fadeInHero {
@@ -38,7 +57,7 @@
       opacity: 0;
     }
     100% {
-      opacity: 0.1;
+      opacity: 0.15;
     }
   }
 
